# bareftp

./: .gitignore  AUTHORS  CREDITS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  bareftp.convert  configure.ac
bareftp/: Makefile.am  bareftp.py  i18n.py.in  mainwin.py  version.py.in
bareftp/config/: bookmarks.py  settings.py
bareftp/lib/: __init__.py  file_permission.py  ftpfile.py  icon_loader.py  listparser.py  repeat_timer.py  stdoutwrapper.py  xferpool.py
bareftp/protocols/: __init__.py  connection_manager.py  ftp.py  local.py  protocol.py
bareftp/utils/: bookmarkutils.py
bareftp/widgets/: __init__.py  bareftpwidgets.py  bookmark.py  chmod_dialog.py  contextmenu.py  filelist.py  fileview.py  preferences.py  progresslist.py
data/: Makefile.am  apps.bareftp.gschema.xml  bareftp.1  bareftp.desktop.in.in
data/icon-theme/: Makefile.am
m4/: Makefile.am
m4/bareftp/: expansions.m4  i18n.m4
po/: LINGUAS  POTFILES  POTFILES.in  ca.po  de.po  el.po  es.po  fr.po  hu.po  it.po  ja.po  nb.po  pl.po  pt_BR.po  ru.po  sk.po  sv.po
